K8S/future-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: futurenpservice-srv
spec:
  type: NodePort
  selector:
    app: futureservice
  ports:
    - name: futureservice
      protocol: TCP
      port: 8081
      targetPort: 8080
